Correción de Inicio (Full HD)

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
         <!-- TOP NAV -->
         <nav class="row nav">
-            <div class="col-3">
-                <span>PUNTO VIOLETA</span>
+            <div class="col-2">
+                <a href="./index.html"><span>PUNTO VIOLETA</span></a>
             </div>
-            <div class="col-6">
+            <div class="col-8">
                 <ul class="nav-list">
                     <li><a href="#">Temas de interés</a></li>
                     <li><a href="#">Derechos</a></li>
@@ -29,25 +29,24 @@
                     <li><a href="#">Galería</a></li>
                 </ul>
             </div>
-            <div class="col-3">
+            <div class="col-2">
                 <a href="#"><img src="./imgs/svg/instagram_icon.svg" alt="instagram_icon"></a>
             </div>
         </nav>
         <!-- TOP NAV -->
 
         <!-- HEADER -->
-        <section class="min-height header">
+        <section class="min-height header"  id="headerID">
             <div>
                 <h2>JUNTAS RESISTIMOS, JUNTAS CRECEMOS</h2>
                 <h1>Punto Violeta</h1>
             </div>
             <section>
-                <img src="./imgs/svg/btn_telegram.svg" alt="btn_telegram">
                 <img src="./imgs/svg/btn_whatsapp.svg" alt="btn_whatsapp">
             </section>
         </section>
         <div class="btn-up">
-            <a href="./index.html"><img src="./imgs/svg/btn_up.svg" alt="btn_up"></a>
+            <a href="#headerID"><img src="./imgs/svg/btn_up.svg" alt="btn_up"></a>
         </div>
         <!-- HEADER -->
 
@@ -140,7 +139,7 @@
                         <input type="text" placeholder="Nombre completo *">
                         <input type="email" placeholder="Correo electrónico *">
                         <input type="text" placeholder="Asunto *">
-                        <textarea name="" id="" cols="30" rows="5" placeholder="Mensaje *"></textarea>
+                        <textarea name="" id="" cols="30" rows="8" placeholder="Mensaje *"></textarea>
                         <button type="submit">Enviar</button>
                     </form>
                 </div>
