Implementación Galería y Derechos

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <div class="col-8">
                 <ul class="nav-list">
                     <li><a href="#">Temas de interés</a></li>
-                    <li><a href="#">Derechos</a></li>
+                    <li><a href="./html/derechos.html">Derechos</a></li>
                     <li><a href="#">Redes comunitarias</a></li>
                     <li><a href="#">Colaboradores</a></li>
-                    <li><a href="#">Galería</a></li>
+                    <li><a href="./html/galeria.html">Galería</a></li>
                 </ul>
             </div>
             <div class="col-2">
@@ -41,9 +41,6 @@
                 <h2>JUNTAS RESISTIMOS, JUNTAS CRECEMOS</h2>
                 <h1>Punto Violeta</h1>
             </div>
-            <section>
-                <img src="./imgs/svg/btn_whatsapp.svg" alt="btn_whatsapp">
-            </section>
         </section>
         <div class="btn-up">
             <a href="#headerID"><img src="./imgs/svg/btn_up.svg" alt="btn_up"></a>
@@ -168,6 +165,12 @@
             <div class="col left-text">
                 <p>©2021</p>
                 <p>Todos los derechos reservados</p>
+            </div>
+            <div class="col icons-footer">
+                <img src="./imgs/svg/icon_punto-violeta.svg" alt="Logo Punto Violeta">
+            </div>
+            <div class="col icons-footer">
+                <img src="./imgs/svg/icon_ret.svg" alt="Logo RET">
             </div>
             <div class="col right-text">
                 <p>By Willy Lara Campos</p>
