Avance 1 - temas de interés

--- a/html/temas_interes.html
+++ b/html/temas_interes.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Galería - Punto Violeta</title>
+    <title>Derechos - Punto Violeta</title>
 </head>
 
 <body>
@@ -23,10 +23,10 @@
             <div class="col-8">
                 <ul class="nav-list">
                     <li><a href="./temas_interes.html">Temas de interés</a></li>
-                    <li><a href="./derechos.html">Derechos</a></li>
+                    <li style="font-weight: 700;"><a href="./derechos.html">Derechos</a></li>
                     <li><a href="#">Redes comunitarias</a></li>
                     <li><a href="#">Colaboradores</a></li>
-                    <li style="font-weight: 700;"><a href="./galeria.html">Galería</a></li>
+                    <li><a href="./galeria.html">Galería</a></li>
                 </ul>
             </div>
             <div class="col-2">
@@ -37,28 +37,55 @@
 
         <!-- HEADER -->
         <section class="min-height cards" id="headerID">
-            <h1>Galería</h1>
+            <h1>Derechos</h1>
             <div class="row container-cards">
                 <div class="col-3">
-                    <div class="col"><a href="#" class="btn-repo">Fotografías</a></div>
-                    <div class="col"><a href="#" class="btn-repo">Video</a></div>
+                    <div class="col"><a href="#" class="btn-repo">Documentación</a></div>
+                    <div class="col"><a href="#" class="btn-repo">Salud</a></div>
+                    <div class="col"><a href="#" class="btn-repo">Educación</a></div>
+                    <div class="col"><a href="#" class="btn-repo">Vivienda</a></div>
+                    <div class="col"><a href="#" class="btn-repo">Laborales</a></div>
+                    <div class="col"><a href="#" class="btn-repo">Permisos Laborales</a></div>
                 </div>
                 <div class="col-9">
                     <div class="row">
-                        <h2>Fotografías</h2>
+                        <h2>Derecho a la Documentación</h2>
                     </div>
                     <div class="row">
-                        <div class="card-galeria">
-                            <img src="../imgs/fotografia_galeria.png" alt="Fotografía">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus at augue ut semper. Praesent mattis sed dui eget placerat. Nullam non erat rutrum magna pharetra luctus eget id erat.</p>
+                    </div>
+                    <div class="row">
+                        <div class="col-4 card-derechos">
+                            <img src="../imgs/svg/document_icon.svg" alt="Documento">
                             <p class="card-p">Título del documento</p>
                         </div>
-                        <div class="card-galeria">
-                            <img src="../imgs/fotografia_galeria.png" alt="Fotografía">
+                        <div class="col-4 card-derechos">
+                            <img src="../imgs/svg/document_icon.svg" alt="Documento">
                             <p class="card-p">Título del documento con una extensión larga </p>
                         </div>
-                        <div class="card-galeria">
-                            <img src="../imgs/fotografia_galeria.png" alt="Fotografía">
+                        <div class="col-4 card-derechos">
+                            <img src="../imgs/svg/document_icon.svg" alt="Documento">
                             <p class="card-p">Título del documento con una extensión exageradamente larga</p>
+                        </div>
+                        <div class="col-4 card-derechos">
+                            <img src="../imgs/svg/document_icon.svg" alt="Documento">
+                            <p class="card-p">Título del documento</p>
+                        </div>
+                        <div class="col-4 card-derechos">
+                            <img src="../imgs/svg/document_icon.svg" alt="Documento">
+                            <p class="card-p">Título del documento con una extensión larga </p>
+                        </div>
+                        <div class="col-4 card-derechos">
+                            <img src="../imgs/svg/document_icon.svg" alt="Documento">
+                            <p class="card-p">Título del documento con una extensión exageradamente larga</p>
+                        </div>
+                        <div class="col-4 card-derechos">
+                            <img src="../imgs/svg/document_icon.svg" alt="Documento">
+                            <p class="card-p">Título del documento</p>
+                        </div>
+                        <div class="col-4 card-derechos">
+                            <img src="../imgs/svg/document_icon.svg" alt="Documento">
+                            <p class="card-p">Título del documento con una extensión larga </p>
                         </div>
                     </div>
                 </div>
