--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="col-8">
                 <ul class="nav-list">
-                    <li><a href="#">Temas de interés</a></li>
+                    <li><a href="./html/temas_interes.html">Temas de interés</a></li>
                     <li><a href="./html/derechos.html">Derechos</a></li>
                     <li><a href="#">Redes comunitarias</a></li>
                     <li><a href="#">Colaboradores</a></li>
