Implementación de diseño - Páginas Colaboladores  y Temas de interés

--- a/html/galeria.html
+++ b/html/galeria.html
@@ -25,7 +25,7 @@
                     <li><a href="./temas_interes.html">Temas de interés</a></li>
                     <li><a href="./derechos.html">Derechos</a></li>
                     <li><a href="#">Redes comunitarias</a></li>
-                    <li><a href="#">Colaboradores</a></li>
+                    <li><a href="./colaboradores.html">Colaboradores</a></li>
                     <li style="font-weight: 700;"><a href="./galeria.html">Galería</a></li>
                 </ul>
             </div>
