--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <li><a href="./html/temas_interes.html">Temas de interés</a></li>
                     <li><a href="./html/derechos.html">Derechos</a></li>
                     <li><a href="#">Redes comunitarias</a></li>
-                    <li><a href="#">Colaboradores</a></li>
+                    <li><a href="./html/colaboradores.html">Colaboradores</a></li>
                     <li><a href="./html/galeria.html">Galería</a></li>
                 </ul>
             </div>
