--- a/html/derechos.html
+++ b/html/derechos.html
@@ -25,7 +25,7 @@
                     <li><a href="#">Temas de interés</a></li>
                     <li style="font-weight: 700;"><a href="#">Derechos</a></li>
                     <li><a href="#">Redes comunitarias</a></li>
-                    <li><a href="#">Colaboradores</a></li>
+                    <li><a href="./colaboradores.html">Colaboradores</a></li>
                     <li><a href="./galeria.html">Galería</a></li>
                 </ul>
             </div>
