--- a/html/temas_interes.html
+++ b/html/temas_interes.html
@@ -25,7 +25,7 @@
                     <li><a href="./temas_interes.html">Temas de interés</a></li>
                     <li style="font-weight: 700;"><a href="./derechos.html">Derechos</a></li>
                     <li><a href="#">Redes comunitarias</a></li>
-                    <li><a href="#">Colaboradores</a></li>
+                    <li><a href="./colaboradores.html">Colaboradores</a></li>
                     <li><a href="./galeria.html">Galería</a></li>
                 </ul>
             </div>
@@ -36,57 +36,145 @@
         <!-- TOP NAV -->
 
         <!-- HEADER -->
-        <section class="min-height cards" id="headerID">
-            <h1>Derechos</h1>
-            <div class="row container-cards">
-                <div class="col-3">
-                    <div class="col"><a href="#" class="btn-repo">Documentación</a></div>
-                    <div class="col"><a href="#" class="btn-repo">Salud</a></div>
-                    <div class="col"><a href="#" class="btn-repo">Educación</a></div>
-                    <div class="col"><a href="#" class="btn-repo">Vivienda</a></div>
-                    <div class="col"><a href="#" class="btn-repo">Laborales</a></div>
-                    <div class="col"><a href="#" class="btn-repo">Permisos Laborales</a></div>
+        <section class="min-height" id="headerID">
+            <div class="row temas-interes-header">
+                <div class="row">
+                    <h1>Temas de Interés</h1>
+                    <p>Lorem ipsum dolor sit amet, cum sapientem honestatis ea, verear labores feugait sea in, cu justo
+                        suscipiantur mel. Mel facilis sensibus petentium in, ne ignota mollis suavitate mei, modus reque
+                        signiferumque in cum. Ut molestiae complectitur eam, partiendo necessitatibus ad vix. Putent
+                        semper nusquam ...</p>
                 </div>
-                <div class="col-9">
-                    <div class="row">
-                        <h2>Derecho a la Documentación</h2>
+                <div class="row">
+                    <div class="col"><a href="#" class="btn-repo">Violencia <br> doméstica</a></div>
+                    <div class="col"><a href="#" class="btn-repo">Voliencia <br> sexual</a></div>
+                    <div class="col"><a href="#" class="btn-repo">Relaciones <br> impropias</a></div>
+                    <div class="col"><a href="#" class="btn-repo">Acoso <br> callejero</a></div>
+                </div>
+            </div>
+
+            <div class="row cards-temas-interes">
+                <div class="col-6">
+                    <div>
+                        <h2>Tipos de violencia</h2>
+
+                        <div>
+                            <h3>Violencia autoinflingida</h3>
+                            <p>Lorem ipsum dolor sit amet, cum sapientem honestatis ea, verear labores feugait sea in,
+                                cu justo suscipiantur mel. Mel facilis sensibus petentium in, ne ignota mollis suavitate
+                                mei, modus reque signiferumque in cum. Ut molestiae complectitur eam, partiendo
+                                necessitatibus ad vix. Putent semper nusquam ...</p>
+                            <hr>
+
+                            <h3>Violencia interpersonal</h3>
+                            <p>Lorem ipsum dolor sit amet, cum sapientem honestatis ea, verear labores feugait sea in,
+                                cu justo suscipiantur mel. Mel facilis sensibus petentium in, ne ignota mollis suavitate
+                                mei, modus reque signiferumque in cum. Ut molestiae complectitur eam, partiendo
+                                necessitatibus ad vix. Putent semper nusquam ...</p>
+                            <hr>
+
+                            <h3>Violencia física</h3>
+                            <p>Lorem ipsum dolor sit amet, cum sapientem honestatis ea, verear labores feugait sea in,
+                                cu justo suscipiantur mel. Mel facilis sensibus petentium in, ne ignota mollis suavitate
+                                mei, modus reque signiferumque in cum. Ut molestiae complectitur eam, partiendo
+                                necessitatibus ad vix. Putent semper nusquam ...</p>
+                            <hr>
+
+                            <h3>Violencia verbal</h3>
+                            <p>Lorem ipsum dolor sit amet, cum sapientem honestatis ea, verear labores feugait sea in,
+                                cu justo suscipiantur mel. Mel facilis sensibus petentium in, ne ignota mollis suavitate
+                                mei, modus reque signiferumque in cum. Ut molestiae complectitur eam, partiendo
+                                necessitatibus ad vix. Putent semper nusquam ...</p>
+                            <hr>
+
+                            <h3>Violencia psicológica</h3>
+                            <p>Lorem ipsum dolor sit amet, cum sapientem honestatis ea, verear labores feugait sea in,
+                                cu justo suscipiantur mel. Mel facilis sensibus petentium in, ne ignota mollis suavitate
+                                mei, modus reque signiferumque in cum. Ut molestiae complectitur eam, partiendo
+                                necessitatibus ad vix. Putent semper nusquam ...</p>
+                        </div>
+
                     </div>
-                    <div class="row">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus at augue ut semper. Praesent mattis sed dui eget placerat. Nullam non erat rutrum magna pharetra luctus eget id erat.</p>
+                    <div>
+                        <h2>Infografía con la Ley</h2>
+                        <img src="../imgs/ejemplo_infografia.png" alt="Infografía">
                     </div>
-                    <div class="row">
-                        <div class="col-4 card-derechos">
-                            <img src="../imgs/svg/document_icon.svg" alt="Documento">
-                            <p class="card-p">Título del documento</p>
+                </div>
+                <div class="col-6">
+                    <div>
+                        <h2>Señales de alarma</h2>
+
+                        <div>
+                            <p>Lorem ipsum dolor sit amet, cum sapientem honestatis ea, verear labores feugait sea in,
+                                cu
+                                justo suscipiantur mel.</p>
+
+                            <p>Lorem ipsum dolor sit amet, cum sapientem honestatis ea, verear labores feugait sea in,
+                                cu
+                                justo suscipiantur mel.</p>
+
+                            <p>Lorem ipsum dolor sit amet, cum sapientem honestatis ea, verear labores feugait sea in,
+                                cu
+                                justo suscipiantur mel.</p>
+
+                            <p>Lorem ipsum dolor sit amet, cum sapientem honestatis ea, verear labores feugait sea in,
+                                cu
+                                justo suscipiantur mel.</p>
+
+                            <p>Lorem ipsum dolor sit amet, cum sapientem honestatis ea, verear labores feugait sea in,
+                                cu
+                                justo suscipiantur mel.</p>
                         </div>
-                        <div class="col-4 card-derechos">
-                            <img src="../imgs/svg/document_icon.svg" alt="Documento">
-                            <p class="card-p">Título del documento con una extensión larga </p>
+
+                    </div>
+                    <div>
+                        <h2>¿Cómo y dónde denunciar?</h2>
+
+                        <div>
+                            <h3>¿Cómo denunciar?</h3>
+                            <p>Lorem ipsum dolor sit amet, cum sapientem honestatis ea, verear labores feugait sea in,
+                                cu
+                                justo suscipiantur mel. Mel facilis sensibus petentium in, ne ignota mollis suavitate
+                                mei,
+                                modus reque signiferumque in cum. Ut molestiae complectitur eam, partiendo
+                                necessitatibus ad
+                                vix. Putent semper nusquam ...</p>
+
+                            <hr>
+
+                            <h3>Dónde denunciar?</h3>
+                            <p>Lorem ipsum dolor sit amet, cum sapientem honestatis ea, verear labores feugait sea in,
+                                cu
+                                justo suscipiantur mel. Mel facilis sensibus petentium in, ne ignota mollis suavitate
+                                mei,
+                                modus reque signiferumque in cum. Ut molestiae complectitur eam, partiendo
+                                necessitatibus ad
+                                vix. Putent semper nusquam ...</p>
                         </div>
-                        <div class="col-4 card-derechos">
-                            <img src="../imgs/svg/document_icon.svg" alt="Documento">
-                            <p class="card-p">Título del documento con una extensión exageradamente larga</p>
+
+                    </div>
+                    <div>
+                        <h2>Requisitos para presentar una denuncia</h2>
+
+                        <div>
+                            <h3>1 - Scelerisque in dictum non consectetur</h3>
+                            <p>Lorem ipsum dolor sit amet, cum sapientem honestatis ea, verear labores feugait sea in,
+                                cu
+                                justo suscipiantur mel.</p>
+                            <hr>
+
+                            <h3>2 - Scelerisque in dictum non consectetur</h3>
+                            <p>Lorem ipsum dolor sit amet, cum sapientem honestatis ea, verear labores feugait sea in,
+                                cu
+                                justo suscipiantur mel.</p>
+                            <hr>
+
+                            <h3>3 - Scelerisque in dictum non consectetur</h3>
+                            <p>Lorem ipsum dolor sit amet, cum sapientem honestatis ea, verear labores feugait sea in,
+                                cu
+                                justo suscipiantur mel.</p>
                         </div>
-                        <div class="col-4 card-derechos">
-                            <img src="../imgs/svg/document_icon.svg" alt="Documento">
-                            <p class="card-p">Título del documento</p>
-                        </div>
-                        <div class="col-4 card-derechos">
-                            <img src="../imgs/svg/document_icon.svg" alt="Documento">
-                            <p class="card-p">Título del documento con una extensión larga </p>
-                        </div>
-                        <div class="col-4 card-derechos">
-                            <img src="../imgs/svg/document_icon.svg" alt="Documento">
-                            <p class="card-p">Título del documento con una extensión exageradamente larga</p>
-                        </div>
-                        <div class="col-4 card-derechos">
-                            <img src="../imgs/svg/document_icon.svg" alt="Documento">
-                            <p class="card-p">Título del documento</p>
-                        </div>
-                        <div class="col-4 card-derechos">
-                            <img src="../imgs/svg/document_icon.svg" alt="Documento">
-                            <p class="card-p">Título del documento con una extensión larga </p>
-                        </div>
+
                     </div>
                 </div>
             </div>
@@ -96,7 +184,7 @@
         </div>
         <!-- HEADER -->
 
-        
+
         <!-- FOTTER -->
         <footer class="row footer">
             <div class="col left-text">
