Página de redes comunitarias

--- a/html/derechos.html
+++ b/html/derechos.html
@@ -22,9 +22,9 @@
             </div>
             <div class="col-8">
                 <ul class="nav-list">
-                    <li><a href="#">Temas de interés</a></li>
-                    <li style="font-weight: 700;"><a href="#">Derechos</a></li>
-                    <li><a href="#">Redes comunitarias</a></li>
+                    <li><a href="./temas_interes.html">Temas de interés</a></li>
+                    <li style="font-weight: 700;"><a href="./derechos.html">Derechos</a></li>
+                    <li><a href="./redes_comunitarias.html">Redes comunitarias</a></li>
                     <li><a href="./colaboradores.html">Colaboradores</a></li>
                     <li><a href="./galeria.html">Galería</a></li>
                 </ul>
