--- a/html/temas_interes.html
+++ b/html/temas_interes.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Derechos - Punto Violeta</title>
+    <title>Temas de Interés - Punto Violeta</title>
 </head>
 
 <body>
@@ -22,9 +22,9 @@
             </div>
             <div class="col-8">
                 <ul class="nav-list">
-                    <li><a href="./temas_interes.html">Temas de interés</a></li>
-                    <li style="font-weight: 700;"><a href="./derechos.html">Derechos</a></li>
-                    <li><a href="#">Redes comunitarias</a></li>
+                    <li style="font-weight: 700;"><a href="./temas_interes.html">Temas de interés</a></li>
+                    <li><a href="./derechos.html">Derechos</a></li>
+                    <li><a href="./redes_comunitarias.html">Redes comunitarias</a></li>
                     <li><a href="./colaboradores.html">Colaboradores</a></li>
                     <li><a href="./galeria.html">Galería</a></li>
                 </ul>
