--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <ul class="nav-list">
                     <li><a href="./html/temas_interes.html">Temas de interés</a></li>
                     <li><a href="./html/derechos.html">Derechos</a></li>
-                    <li><a href="#">Redes comunitarias</a></li>
+                    <li><a href="./html/redes_comunitarias.html">Redes comunitarias</a></li>
                     <li><a href="./html/colaboradores.html">Colaboradores</a></li>
                     <li><a href="./html/galeria.html">Galería</a></li>
                 </ul>
