--- a/html/galeria.html
+++ b/html/galeria.html
@@ -24,7 +24,7 @@
                 <ul class="nav-list">
                     <li><a href="./temas_interes.html">Temas de interés</a></li>
                     <li><a href="./derechos.html">Derechos</a></li>
-                    <li><a href="#">Redes comunitarias</a></li>
+                    <li><a href="./redes_comunitarias.html">Redes comunitarias</a></li>
                     <li><a href="./colaboradores.html">Colaboradores</a></li>
                     <li style="font-weight: 700;"><a href="./galeria.html">Galería</a></li>
                 </ul>
