Implementación mobile - Derechos y Temas de interés

--- a/html/derechos.html
+++ b/html/derechos.html
@@ -16,22 +16,25 @@
     <section class="container-fluid min-height">
 
         <!-- TOP NAV -->
-        <nav class="row nav">
-            <div class="col-2">
-                <a href="../index.html"><span>PUNTO VIOLETA</span></a>
-            </div>
-            <div class="col-8">
+        <nav class="nav">
+            <svg class="menu-ham" width="26" height="23" viewBox="0 0 26 23" fill="currentcolor" xmlns="http://www.w3.org/2000/svg" onclick="mostrarMenu()">
+                <path d="M26 4.6V0H0V4.6H26ZM26 13.8V9.2H0V13.8H26ZM26 23V18.4H0V23H26Z" fill="currentcolor"/>
+            </svg>
+            <a class="logo-nav" href="../index.html"><span>PUNTO VIOLETA</span></a>
+            <div>
                 <ul class="nav-list">
                     <li><a href="./temas_interes.html">Temas de interés</a></li>
-                    <li style="font-weight: 700;"><a href="./derechos.html">Derechos</a></li>
+                    <li><a href="./derechos.html">Derechos</a></li>
                     <li><a href="./redes_comunitarias.html">Redes comunitarias</a></li>
                     <li><a href="./colaboradores.html">Colaboradores</a></li>
                     <li><a href="./galeria.html">Galería</a></li>
-                </ul>
+                </ul>  
+                <div class="nav-list-bg" onclick="mostrarMenu()"></div>
+                </div>              
             </div>
-            <div class="col-2">
+            <span>
                 <a href="#"><img src="../imgs/svg/instagram_icon.svg" alt="instagram_icon"></a>
-            </div>
+            </span>
         </nav>
         <!-- TOP NAV -->
 
@@ -39,15 +42,23 @@
         <section class="min-height cards" id="headerID">
             <h1>Derechos</h1>
             <div class="row container-cards">
-                <div class="col-3">
-                    <div class="col"><a href="#" class="btn-repo">Documentación</a></div>
-                    <div class="col"><a href="#" class="btn-repo">Salud</a></div>
-                    <div class="col"><a href="#" class="btn-repo">Educación</a></div>
-                    <div class="col"><a href="#" class="btn-repo">Vivienda</a></div>
-                    <div class="col"><a href="#" class="btn-repo">Laborales</a></div>
-                    <div class="col"><a href="#" class="btn-repo">Permisos Laborales</a></div>
+                <div class="col-sm-3">
+                    <div class="row select-box">
+                        <div id="txt-select-box">
+                            <p>Documentación</p><img src="../imgs/svg/icon_dropdown.svg"
+                                alt="icon_dropdown">
+                        </div>
+                        <div class="options-container">
+                            <div class="col option"><a href="#" class="btn-repo">Documentación</a></div>
+                            <div class="col option"><a href="#" class="btn-repo">Salud</a></div>
+                            <div class="col option"><a href="#" class="btn-repo">Educación</a></div>
+                            <div class="col option"><a href="#" class="btn-repo">Vivienda</a></div>
+                            <div class="col option"><a href="#" class="btn-repo">Laborales</a></div>
+                            <div class="col option"><a href="#" class="btn-repo">Permisos Laborales</a></div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-9">
+                <div class="col-sm-9">
                     <div class="row">
                         <h2>Derecho a la Documentación</h2>
                     </div>
@@ -55,35 +66,35 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque cursus at augue ut semper. Praesent mattis sed dui eget placerat. Nullam non erat rutrum magna pharetra luctus eget id erat.</p>
                     </div>
                     <div class="row">
-                        <div class="col-4 card-derechos">
+                        <div class="col-sm-4 card-derechos">
                             <img src="../imgs/svg/document_icon.svg" alt="Documento">
                             <p class="card-p">Título del documento</p>
                         </div>
-                        <div class="col-4 card-derechos">
+                        <div class="col-sm-4 card-derechos">
                             <img src="../imgs/svg/document_icon.svg" alt="Documento">
                             <p class="card-p">Título del documento con una extensión larga </p>
                         </div>
-                        <div class="col-4 card-derechos">
+                        <div class="col-sm-4 card-derechos">
                             <img src="../imgs/svg/document_icon.svg" alt="Documento">
                             <p class="card-p">Título del documento con una extensión exageradamente larga</p>
                         </div>
-                        <div class="col-4 card-derechos">
+                        <div class="col-sm-4 card-derechos">
                             <img src="../imgs/svg/document_icon.svg" alt="Documento">
                             <p class="card-p">Título del documento</p>
                         </div>
-                        <div class="col-4 card-derechos">
+                        <div class="col-sm-4 card-derechos">
                             <img src="../imgs/svg/document_icon.svg" alt="Documento">
                             <p class="card-p">Título del documento con una extensión larga </p>
                         </div>
-                        <div class="col-4 card-derechos">
+                        <div class="col-sm-4 card-derechos">
                             <img src="../imgs/svg/document_icon.svg" alt="Documento">
                             <p class="card-p">Título del documento con una extensión exageradamente larga</p>
                         </div>
-                        <div class="col-4 card-derechos">
+                        <div class="col-sm-4 card-derechos">
                             <img src="../imgs/svg/document_icon.svg" alt="Documento">
                             <p class="card-p">Título del documento</p>
                         </div>
-                        <div class="col-4 card-derechos">
+                        <div class="col-sm-4 card-derechos">
                             <img src="../imgs/svg/document_icon.svg" alt="Documento">
                             <p class="card-p">Título del documento con una extensión larga </p>
                         </div>
@@ -99,17 +110,17 @@
         
         <!-- FOTTER -->
         <footer class="row footer">
-            <div class="col left-text">
+            <div class="col-sm left-text">
                 <p>©2021</p>
                 <p>Todos los derechos reservados</p>
             </div>
-            <div class="col icons-footer">
+            <div class="col-sm icons-footer">
                 <img src="../imgs/svg/icon_punto-violeta.svg" alt="Logo Punto Violeta">
             </div>
-            <div class="col icons-footer">
+            <div class="col-sm icons-footer">
                 <img src="../imgs/svg/icon_ret.svg" alt="Logo RET">
             </div>
-            <div class="col right-text">
+            <div class="col-sm right-text">
                 <p>By Willy Lara Campos</p>
                 <p>By Ronald Chaves González</p>
                 <p>By Benjamín Álvarez Rodríguez</p>
@@ -118,7 +129,7 @@
         <!-- FOTTER -->
 
     </section>
-
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
