Mobile, modales y BD
Cambios del viernes 22 de octubre de 2021

--- a/html/redes_comunitarias.html
+++ b/html/redes_comunitarias.html
@@ -57,7 +57,7 @@
 
                 <div class="row card-iniciativas">
                     <h2>Iniciativas</h2>
-                    <div class="col-6">
+                    <div class="col-sm-6">
                         <div>
                             <img src="../imgs/svg/icon_pointer.svg" alt="icon_pointer">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper a lacus vestibulum sed arcu. </p>
@@ -67,7 +67,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper a lacus vestibulum sed arcu. </p>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-sm-6">
                         <div>
                             <img src="../imgs/svg/icon_prisma.svg" alt="icon_prisma">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamcorper a lacus vestibulum sed arcu. </p>
